--- a/src/package.json
+++ b/src/package.json
@@ -42,6 +42,7 @@
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-pdf": "^7.3.3",
     "react-syntax-highlighter": "^15.5.0",
     "tailwind-merge": "^2.0.0",
     "tailwindcss": "^3.3.5",
